# otus-cpp

./: CMakeLists.txt  ip_filter.cpp  main.cpp  test_version.cpp  version.h.in
.github/workflows/: release.yml
ip_filter/: README.md  ip_filter.cpp  ip_filter.hpp
